Implement petition save and submit actions

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="form-horizontal col-md-12 leftForm" role="form" {{action "petitionCreate" on="submit"}}>
+	<form class="form-horizontal col-md-12 leftForm" role="form">
 
 		<div class="col-md-6 leftForm">
 			{{partial 'petition-profile'}}
@@ -15,7 +15,7 @@
 					<select onchange={{action "setMovementCategory" value="target.value"}}>
 						<option value=""></option>
 						{{#each movement-categories as |movementCategoryChoice|}}
-						<option value={{movementCategoryChoice.id}} selected={{eq movementCategoryChoice.id model.movementCategory.id}}>{{movementCategoryChoice.name}}</option>
+							<option value={{movementCategoryChoice.id}} selected={{eq movementCategoryChoice.id model.movementCategory.id}}>{{movementCategoryChoice.name}}</option>
 						{{/each}}
 					</select>				
 				</div>
@@ -27,12 +27,12 @@
 					<select onchange={{action "setProject" value="target.value"}}>
 						<option value=""></option>
 						{{#each projects as |projectChoice|}}
-						<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
+							<option value={{projectChoice.id}} selected={{eq projectChoice.id model.project.id}}>{{projectChoice.name}}</option>
 						{{/each}}
 					</select>	
 				</div>
 				{{#if (v-get model 'project' 'isInvalid') }}
-				<font color="red">{{v-get model 'project' 'message'}}</font>
+					<font color="red">{{v-get model 'project' 'message'}}</font>
 				{{/if}} 
 
 			</div>
@@ -58,7 +58,7 @@
 						<option value=""></option>
 
 						{{#each departure-points as |departurePointChoice|}}
-						<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
+							<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
 						{{/each}}
 					</select>	
 				</div>
@@ -71,7 +71,7 @@
 						<option value=""></option>
 
 						{{#each arrival-points as |arrivalPointChoice|}}
-						<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPoint.id}}>{{arrivalPointChoice.name}}</option>
+							<option value={{arrivalPointChoice.id}} selected={{eq arrivalPointChoice.id model.arrivalPoint.id}}>{{arrivalPointChoice.name}}</option>
 						{{/each}}
 					</select>
 				</div>
@@ -85,7 +85,7 @@
 						<option value=""></option>
 
 						{{#each transportations as |transportationChoice|}}
-						<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportation.id}}>{{transportationChoice.name}}</option>
+							<option value={{transportationChoice.id}} selected={{eq transportationChoice.id model.transportation.id}}>{{transportationChoice.name}}</option>
 						{{/each}}
 					</select>
 				</div>
@@ -95,7 +95,7 @@
 				<label for="reason" class="col-sm-4 control-label">Αιτιολογία Μετακίνησης</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.reason type="textarea" class="form-control" autofocus="autofocus"}}
+						{{textarea value=model.reason type="textarea" class="form-control" autofocus="autofocus"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -104,7 +104,7 @@
 				<label for="recTransport" class="col-sm-4 control-label">Προτεινόμενα Μέσα Μετακίνησης</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recTransport type="text" class="form-control" autofocus="autofocus"}}
+						{{textarea value=model.recTransport type="text" class="form-control" autofocus="autofocus"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -113,7 +113,7 @@
 				<label for="recAccomondation" class="col-sm-4 control-label">Προτεινόμενο Κατάλυμα</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recAccomondation type="textarea" class="form-control" autofocus="autofocus"}}
+						{{textarea value=model.recAccomondation type="textarea" class="form-control" autofocus="autofocus"}}
 					{{/character-limit}}
 				</div>
 			</div>
@@ -122,13 +122,13 @@
 				<label for="recCostParticipation" class="col-sm-4 control-label">Κόστος Συμμετοχής</label>
 				<div class="col-sm-8">	
 					{{#character-limit max=100}}
-					{{textarea value=model.recCostParticipation type="textarea" class="form-control" autofocus="autofocus"}}
+						{{textarea value=model.recCostParticipation type="textarea" class="form-control" autofocus="autofocus"}}
 					{{/character-limit}}
 				</div>
 			</div>
 		</div>	
-		<button type="save" class="btn btn-primary">Αποθήκευση Στοιχείων</button>
-		<button type="submit" class="btn btn-primary" disabled={{v-get model 'isInvalid'}}>Υποβολή Αίτησης</button>
+		<button type="submit" class="btn btn-primary" {{action "petitionSave"}} disabled={{v-get model 'isInvalid'}}>Αποθήκευση Στοιχείων</button>
+		<button type="submit" class="btn btn-primary" {{action "petitionSubmit"}} disabled={{v-get model 'isInvalid'}}>Υποβολή Αίτησης</button>
 
 
 	</form><br>
