--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -5,86 +5,94 @@
 
 		<div class="profileForm form-group">
 			<label for="email" class="col-sm-2 control-label">Email</label>
-		<div class="col-sm-4">
-			{{input value=model.email type="text" class="form-control" autofocus="autofocus"}}
-		</div>	
-		{{#if (v-get model 'email' 'isInvalid') }}
-		<font color="red">{{v-get model 'email' 'message'}}</font>
-		<!--<font color="red">{{message}}</font>-->
-		{{/if}}
+			<div class="col-sm-4">
+				{{input value=model.email type="text" class="form-control" autofocus="autofocus"}}
+			</div>	
+			{{#if (v-get model 'email' 'isInvalid') }}
+				<font color="red">{{v-get model 'email' 'message'}}</font>
+				<!--<font color="red">{{message}}</font>-->
+			{{/if}}
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="first_name" class="col-sm-2 control-label">Όνομα</label>
-		<div class="col-sm-4"> 	
-			{{input value=model.first_name type="text" class="form-control" autofocus="autofocus"}}
-		</div>
+			<div class="col-sm-4"> 	
+				{{input value=model.first_name type="text" class="form-control" autofocus="autofocus"}}
+			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="last_name" class="col-sm-2 control-label">Επώνυμο</label>
-		<div class="col-sm-4"> 	
-			{{input value=model.last_name type="text" class="form-control" autofocus="autofocus"}}
-		</div>
+			<div class="col-sm-4"> 	
+				{{input value=model.last_name type="text" class="form-control" autofocus="autofocus"}}
+			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="iban" class="col-sm-2 control-label">IBAN</label>
-		<div class="col-sm-4"> 
-			{{input value=model.iban type="text" class="form-control" autofocus="autofocus"}}
-		</div>	
+			<div class="col-sm-4"> 
+				{{input value=model.iban type="text" class="form-control" autofocus="autofocus"}}
+			</div>	
 			{{#if (v-get model 'iban' 'isInvalid') }}
-			<font color="red">{{v-get model 'iban' 'message'}}</font>
+				<font color="red">{{v-get model 'iban' 'message'}}</font>
 			{{/if}} 
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="specialty" class="col-sm-2 control-label">Ειδικότητα</label>
-		<div class="col-sm-4"> 	
-			
-			<select onchange={{action "setSpecialty" value="target.value"}}>
-				{{#each specialties as |specialtyChoice|}}
-				<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
+			<div class="col-sm-4"> 	
 
-				{{/each}}
-			</select>
-		</div> 
+				<select onchange={{action "setSpecialty" value="target.value"}}>
+					<option value=""></option>
+
+					{{#each specialties as |specialtyChoice|}}
+						<option value={{specialtyChoice.id}} selected={{eq specialtyChoice.id model.specialtyID.id}}>{{specialtyChoice.name}}</option>
+
+					{{/each}}
+				</select>
+			</div> 
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="kind" class="col-sm-2 control-label">Ιδιότητα</label>
-		<div class="col-sm-4"> 	
-			<select onchange={{action "setKind" value="target.value"}}>
-				{{#each kinds as |kindChoice|}}
+			<div class="col-sm-4"> 	
 
-				<option value={{kindChoice.id}} selected={{eq kindChoice.id model.userKind.id}}>{{kindChoice.name}}</option>
+				<select onchange={{action "setKind" value="target.value"}}>
+					<option value=""></option>
 
-				{{/each}}
-			</select>
-		</div>
+					{{#each kinds as |kindChoice|}}
+
+						<option value={{kindChoice.id}} selected={{eq kindChoice.id model.kind.id}}>{{kindChoice.name}}</option>
+
+					{{/each}}
+				</select>
+			</div>
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="taxRegNum" class="col-sm-2 control-label">ΑΦΜ</label>
-		<div class="col-sm-4">
-			{{input value=model.taxRegNum type="text" class="form-control" autofocus="autofocus"}}
-		</div>	
+			<div class="col-sm-4">
+				{{input value=model.taxRegNum type="text" class="form-control" autofocus="autofocus"}}
+			</div>	
 			{{#if (v-get model 'taxRegNum' 'isInvalid') }}
-			<font color="red">{{v-get model 'taxRegNum' 'message'}}</font>
+				<font color="red">{{v-get model 'taxRegNum' 'message'}}</font>
 			{{/if}}
 		</div>
 
 		<div class="profileForm form-group">
 			<label for="taxOffice" class="col-sm-2 control-label">ΔΟΥ</label>
-		<div class="col-sm-4"> 	
-			<select onchange={{action "setTaxOffice" value="target.value"}}>
-				{{#each tax-offices  as |taxOfficeChoice|}}
+			<div class="col-sm-4"> 	
 
-				<option value={{taxOfficeChoice.id}} selected={{eq taxOfficeChoice.id model.taxOffice.id}}>{{taxOfficeChoice.name}}</option>
+				<select onchange={{action "setTaxOffice" value="target.value"}}>
+					<option value=""></option>
 
-				{{/each}}
-			</select>
-		</div>	
+					{{#each tax-offices  as |taxOfficeChoice|}}
+
+						<option value={{taxOfficeChoice.id}} selected={{eq taxOfficeChoice.id model.taxOffice.id}}>{{taxOfficeChoice.name}}</option>
+
+					{{/each}}
+				</select>
+			</div>	
 		</div>
 
 		<div class="col-sm-offset-2">
