--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -93,6 +93,13 @@
 
 		<div class="col-sm-offset-2">
 			<button type="submit" class="btn btn-primary" disabled={{v-get model 'isInvalid'}}>Submit</button>
+		</div>
+
+		<div class="profileForm">
+			{{#if (v-get model 'isValid') }}
+			<font color="green">{{message}}</font>
+			{{/if}}
+
 		</div>	
 	</form>
 
