--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -130,7 +130,12 @@
 		<button type="submit" class="btn btn-primary" {{action "petitionSave"}} disabled={{v-get model 'isInvalid'}}>Αποθήκευση Στοιχείων</button>
 		<button type="submit" class="btn btn-primary" {{action "petitionSubmit"}} disabled={{v-get model 'isInvalid'}}>Υποβολή Αίτησης</button>
 
+		<div class="profileForm">
+			{{#if (v-get model 'isValid') }}
+			<font color="green">{{message}}</font>
+			{{/if}}
 
+		</div>
 	</form><br>
 
 </div>
