--- a/travelsFront/app/templates/navbar.hbs
+++ b/travelsFront/app/templates/navbar.hbs
@@ -12,6 +12,7 @@
 				<ul class="nav navbar-nav navbar-left">
 					{{#link-to "profile" tagName="li"}}<a href="">Προφίλ</a>{{/link-to}}
                 	{{#link-to "petition" tagName="li"}}<a href="">Νέα Αίτηση</a>{{/link-to}}
+                	{{#link-to "petitionList" tagName="li"}}<a href="">Αιτήσεις</a>{{/link-to}}
 				</ul> 
 				{{else}}
 				<ul class="nav navbar-nav navbar-right">
