--- a/travelsFront/app/templates/petition-profile.hbs
+++ b/travelsFront/app/templates/petition-profile.hbs
@@ -28,7 +28,7 @@
 <div class="profileForm form-group">
 	<label for="specialtyID" class="col-sm-2 control-label">Ειδικότητα</label>
 	<div class="col-sm-4">	
-		<select onchange={{action "setSpecialty" value="target.value"}}>
+		<select onchange={{action "setSpecialty" value="target.value"}} class="form-control">
 			<option value=""></option>
 
 			{{#each specialties as |specialtyChoice|}}
@@ -42,7 +42,7 @@
 <div class="profileForm form-group">
 	<label for="kind" class="col-sm-2 control-label">Ιδιότητα</label>
 	<div class="col-sm-4">	
-		<select onchange={{action "setKind" value="target.value"}}>
+		<select onchange={{action "setKind" value="target.value"}} class="form-control">
 			<option value=""></option>
 
 			{{#each kinds as |kindChoice|}}
@@ -69,7 +69,7 @@
 <div class="profileForm form-group">
 	<label for="taxOffice" class="col-sm-2 control-label">ΔΟΥ</label>
 	<div class="col-sm-4">	
-		<select onchange={{action "setTaxOffice" value="target.value"}}>
+		<select onchange={{action "setTaxOffice" value="target.value"}} class="form-control"> 
 			<option value=""></option>
 			{{#each tax-offices  as |taxOfficeChoice|}}
 
