--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -1,12 +1,31 @@
-<h5>Λίστα Αιτήσεων: </h5>
-
-<ul>
-  {{#each model in petition}}
-  <li>
-    {{petition.projectChoice.id}}
-    {{#link-to "petition" class="btn btn-success btn-small"}}Νέα Αίτηση{{/link-to}}
-  </li>
-  {{/each}}
-</ul>
+<div>
+<table class="table table-sm">
+  <thead>
+    <tr>
+      <th>Όνομα</th>
+      <th>Επώνυμο</th>
+      <th>Έργο</th>
+      <th>Προορισμός</th>
+      <th>Ημ/νία Αναχώρησης</th>
+      <th>Ημ/νία Προορισμού</th>
+      <th>{{#link-to "petition" class="btn btn-success btn-small"}}Νέα Αίτηση{{/link-to}}</th>
+    </tr>
+  </thead>
+  <tbody>
+  	{{#each model as |petition|}}
+    <tr>
+      	<td>{{petition.name}}</td>
+      	<td>{{petition.surname}}</td>
+      	<td>{{petition.project.id}}</td>
+      	<td>{{petition.arrivalPoint.id}}</td>
+      	<td>{{petition.taskStartDate}}</td>
+      	<td>{{petition.taskEndDate}}</td>
+  		<td>{{#link-to "petition" class="btn btn-warning btn-small"}}Επεξεργασία{{/link-to}}</td>
+  		<td><span class="btn btn-danger btn-small">Διαγραφή</span></td>  
+    </tr>
+    {{/each}}
+  </tbody>
+</table>
+</div>
 
 {{outlet}}
