fix typo in table header

--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -7,7 +7,7 @@
       <th>Έργο</th>
       <th>Προορισμός</th>
       <th>Ημ/νία Αναχώρησης</th>
-      <th>Ημ/νία Προορισμού</th>
+      <th>Ημ/νία Επιστροφής</th>
       <th>{{#link-to "petition" class="btn btn-success btn-small"}}Νέα Αίτηση{{/link-to}}</th>
     </tr>
   </thead>
