add failure message on profile/petition save & submit actions

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -132,10 +132,14 @@
 
 		<div class="profileForm">
 			{{#if (v-get model 'isValid') }}
+			{{#if statePetition}}
 			<font color="green">{{message}}</font>
+			{{else}}
+			<font color="red">{{message}}</font>
 			{{/if}}
-
+			{{/if}}
 		</div>
+
 	</form><br>
 
 </div>
