--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -97,9 +97,12 @@
 
 		<div class="profileForm">
 			{{#if (v-get model 'isValid') }}
+			{{#if stateProfile}}
 			<font color="green">{{message}}</font>
+			{{else}}
+			<font color="red">{{message}}</font>
 			{{/if}}
-
+			{{/if}}
 		</div>	
 	</form>
 
