Configure lookup adapters for findAll and findRecord request types

--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -18,8 +18,8 @@
     <tr>
       	<td>{{petition.name}}</td>
       	<td>{{petition.surname}}</td>
-      	<td>{{petition.project.id}}</td>
-      	<td>{{petition.arrivalPoint.id}}</td>
+      	<td>{{petition.project.name}}</td>
+      	<td>{{petition.arrivalPoint.name}}</td>
       	<td>{{petition.taskStartDate}}</td>
       	<td>{{petition.taskEndDate}}</td>
   		<td><span class="btn btn-warning btn-small">Επεξεργασία</span></td>
