--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -1,35 +1,38 @@
 <div>
-	<table class="table table-sm">
-		<thead>
-			<tr>
-				<th>Όνομα</th>
-				<th>Επώνυμο</th>
-				<th>Έργο</th>
-				<th>Προορισμός</th>
-				<th>Ημ/νία Αναχώρησης</th>
-				<th>Ημ/νία Επιστροφής</th>
-				<th>{{#link-to "petition" class="btn btn-success btn-small"}}Νέα Αίτηση{{/link-to}}</th>
-			</tr>
-		</thead>
-		<tbody>
+<table class="table table-sm">
+  <thead>
+    <tr>
+      <th>Όνομα</th>
+      <th>Επώνυμο</th>
+      <th>Έργο</th>
+      <th>Προορισμός</th>
+      <th>Ημ/νία Αναχώρησης</th>
+      <th>Ημ/νία Επιστροφής</th>
+      <th>Κατάσταση</th>
+      <th>{{#link-to "petition" class="btn btn-success btn-small"}}Νέα Αίτηση{{/link-to}}</th>
+    </tr>
+  </thead>
+  <tbody>
+    
+  	{{#each model as |petition|}}
+    {{#if petition.name}}
+    <tr>
+      	<td>{{petition.name}}</td>
+      	<td>{{petition.surname}}</td>
+      	<td>{{petition.project.name}}</td>
+      	<td>{{petition.arrivalPoint.name}}</td>
+      	<td>{{petition.taskStartDate}}</td>
+      	<td>{{petition.taskEndDate}}</td>
+      	<td>{{petition.status.name}}</td>
+  		<td><span class="btn btn-warning btn-small">Επεξεργασία</span></td>
+  		<td><span class="btn btn-danger btn-small">Διαγραφή</span></td>  
+    </tr>
+    {{/if}}
+    {{/each}}
+    	    
+  </tbody>
+</table>
 
-		{{#each model as |petition|}}
-		{{#if petition.name}}
-		<tr>
-			<td>{{petition.name}}</td>
-			<td>{{petition.surname}}</td>
-			<td>{{petition.project.name}}</td>
-			<td>{{petition.arrivalPoint.name}}</td>
-			<td>{{petition.taskStartDate}}</td>
-			<td>{{petition.taskEndDate}}</td>
-			<td><span class="btn btn-warning btn-small">Επεξεργασία</span></td>
-			<td><span class="btn btn-danger btn-small">Διαγραφή</span></td>  
-		</tr>
-		{{/if}}
-		{{/each}}
-
-		</tbody>
-	</table>
 </div>
 
 {{outlet}}
