Add creation time to a new petition

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -8,6 +8,7 @@
 		<div class="col-md-6 rightForm">	
 
 			<h4>Στοιχεία Αίτησης Ταξιδιού</h4><br>
+			{{currentDate}}
 
 			<div class="profileForm form-group">
 				<label for="movementCategory" class="col-sm-4 control-label">Κατηγορία Μετακίνησης</label><br>
