Implement edit petition

--- a/travelsFront/app/templates/edit-petition.hbs
+++ b/travelsFront/app/templates/edit-petition.hbs
@@ -7,14 +7,14 @@
 			<div class="profileForm form-group">
 				<label for="first_name" class="col-sm-2 control-label">Όνομα</label>
 				<div class="col-sm-8">
-					{{input value=model.first_name type="text" class="form-control" autofocus="autofocus"}}
+					{{input value=model.name type="text" class="form-control" autofocus="autofocus"}}
 				</div>
 			</div>
 
 			<div class="profileForm form-group">
 				<label for="last_name" class="col-sm-2 control-label">Επώνυμο</label>
 				<div class="col-sm-8">	
-					{{input value=model.last_name type="text" class="form-control" autofocus="autofocus"}}
+					{{input value=model.surname type="text" class="form-control" autofocus="autofocus"}}
 				</div>
 			</div>
 
