Implement update petition logic

--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -7,6 +7,7 @@
 				<th>Έργο</th>
 				<th>Προορισμός</th>
 				<th>Ημ/νια Δημιουργίας</th>
+				<th>Τελευταία ανανέωση</th>
 				<th>Ημ/νία Αναχώρησης</th>
 				<th>Ημ/νία Επιστροφής</th>
 				<th>Κατάσταση</th>
@@ -23,6 +24,7 @@
 			<td>{{petition.project.name}}</td>
 			<td>{{petition.arrivalPoint.name}}</td>
 			<td>{{petition.creationDate}}</td>
+			<td>{{petition.updateDate}}</td>
 			<td>{{petition.taskStartDate}}</td>
 			<td>{{petition.taskEndDate}}</td>
 			<td>{{petition.status.name}}</td>
