--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -12,31 +12,31 @@
 				<th>Ημ/νία Επιστροφής</th>
 				<th>Κατάσταση</th>
 				<th>{{#link-to "petition" class="btn btn-success btn-small"}}Νέα Αίτηση{{/link-to}}</th>
-			</tr>
-		</thead>
-		<tbody>
+				</tr>
+			</thead>
+			<tbody>
 
-		{{#each model as |petition|}}
-		{{#if petition.name}}
-		<tr>
-			<td>{{petition.name}}</td>
-			<td>{{petition.surname}}</td>
-			<td>{{petition.project.name}}</td>
-			<td>{{petition.arrivalPoint.name}}</td>
-			<td>{{petition.creationDate}}</td>
-			<td>{{petition.updateDate}}</td>
-			<td>{{petition.taskStartDate}}</td>
-			<td>{{petition.taskEndDate}}</td>
-			<td>{{petition.status.name}}</td>
-			<td><button type="submit" class="btn btn-warning btn-small" {{action "petitionEdit" petition.id on="click"}} disabled={{not-eq petition.status.name "δημιουργηθείσα από μετακινούμενο" }}>Επεξεργασία</button></td>
-			<td><button type="submit" class="btn btn-danger btn-small" {{action "petitionDelete" petition.id petition.status.name on="click"}} disabled={{not-eq petition.status.name "δημιουργηθείσα από μετακινούμενο" }}>Διαγραφή</button></td>
-		</tr>
-		{{/if}}
-		{{/each}}
-		{{deleteMessage}}    
-		</tbody>
-	</table>
+			{{#each model as |petition|}}
+				{{#if petition.project.name}}
+					<tr>
+						<td >{{petition.name}}</td>
+						<td>{{petition.surname}}</td>
+						<td >{{petition.project.name}}</td>
+						<td>{{petition.arrivalPoint.name}}</td>
+						<td>{{petition.creationDate}}</td>
+						<td>{{petition.updateDate}}</td>
+						<td>{{petition.taskStartDate}}</td>
+						<td>{{petition.taskEndDate}}</td>
+						<td>{{petition.status.name}}</td>
+						<td><button type="submit" class="btn btn-warning btn-small" {{action "petitionEdit" petition.id on="click"}} disabled={{not-eq petition.status.name "δημιουργηθείσα από μετακινούμενο" }}>Επεξεργασία</button></td>
+						<td><button type="submit" class="btn btn-danger btn-small" {{action "petitionDelete" petition.id petition.status.name on="click"}} disabled={{not-eq petition.status.name "δημιουργηθείσα από μετακινούμενο" }}>Διαγραφή</button></td>
+					</tr>
+				{{/if}}
+			{{/each}}
+			{{deleteMessage}}    
+			</tbody>
+		</table>
 
-</div>
+	</div>
 
-{{outlet}}
+	{{outlet}}
