--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -11,5 +11,9 @@
 	display: inline-block;   
 }
 .arrival-point {
-	border-style: groove;
+	border-radius: 1%;
+	border: 1px dotted #cccccc;
+	padding-right: 2%;
+	padding-top: 3%;
+	margin-bottom: 3%; 
 }
