Preselect 'Athens' in departurePoint select tag

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -56,7 +56,7 @@
 				<label for="departurePoint" class="col-sm-4 control-label">Τόπος Αναχώρησης</label>
 				<div class="col-sm-8">
 					<select onchange={{action "setDeparturePoint" value="target.value"}} class="form-control">
-						<option value=""></option>
+						<!-- <option value=""></option> -->
 
 						{{#each departurePoints as |departurePointChoice|}}
 						<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.name "ΑΘΗΝΑ"}}>{{departurePointChoice.name}}</option>
