Chooce Athens as the default departue point

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -59,7 +59,7 @@
 						<option value=""></option>
 
 						{{#each departurePoints as |departurePointChoice|}}
-						<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.id model.departurePoint.id}}>{{departurePointChoice.name}}</option>
+						<option value={{departurePointChoice.id}} selected={{eq departurePointChoice.name "ΑΘΗΝΑ"}}>{{departurePointChoice.name}}</option>
 						{{/each}}
 					</select>	
 				</div>
