Clear error messages on load

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -148,9 +148,9 @@
 		<div class="profileForm">
 			{{#if (v-get model 'isValid') }}
 			{{#if statePetition}}
-			<font color="green">{{message}}</font>
+			<font color="green">{{petitionMessage}}</font>
 			{{else}}
-			<font color="red">{{message}}</font>
+			<font color="red">{{petitionMessage}}</font>
 			{{/if}}
 			{{/if}}
 		</div>
