--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -98,9 +98,9 @@
 		<div class="profileForm">
 			{{#if (v-get model 'isValid') }}
 				{{#if stateProfile}}
-					<font color="green">{{message}}</font>
+					<font color="green">{{profileMessage}}</font>
 				{{else}}
-					<font color="red">{{message}}</font>
+					<font color="red">{{profileMessage}}</font>
 				{{/if}}
 			{{/if}}
 		</div>	
