Add css color classes to messages

--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -33,7 +33,10 @@
 					</tr>
 				{{/if}}
 			{{/each}}
-			{{deleteMessage}}    
+
+			<div class="profileForm" id="divMessage">
+				<font>{{deleteMessage}}</font>	
+			</div>    
 			</tbody>
 	</table>
 
