--- a/travelsFront/app/templates/edit-petition.hbs
+++ b/travelsFront/app/templates/edit-petition.hbs
@@ -227,13 +227,9 @@
 		<button type="submit" class="btn btn-primary" {{action "petitionSave"}} disabled={{v-get model 'isInvalid'}}>Αποθήκευση Στοιχείων</button>
 		<button type="submit" class="btn btn-primary" {{action "petitionSubmit"}} disabled={{v-get model 'isInvalid'}}>Υποβολή Αίτησης</button>
 
-		<div class="profileForm">
+		<div class="profileForm" id="divMessage">
 			{{#if (v-get model 'isValid') }}
-			{{#if statePetition}}
-			<font color="green">{{message}}</font>
-			{{else}}
-			<font color="red">{{message}}</font>
-			{{/if}}
+				<font>{{editMessage}}</font>
 			{{/if}}
 		</div>
 
