--- a/travelsFront/app/templates/petition-profile.hbs
+++ b/travelsFront/app/templates/petition-profile.hbs
@@ -81,16 +81,16 @@
 </div>
 
 <div class="profileForm form-group">
-			<label for="userCategory" class="col-sm-2 control-label">Κατηγορία Χρήστη</label>
-			<div class="col-sm-4"> 	
-				<select onchange={{action "setUserCategory" value="target.value"}} class="form-control">
-					<option value=""></option>
+	<label for="category" class="col-sm-2 control-label">Κατηγορία Χρήστη</label>
+	<div class="col-sm-8"> 	
+		<select onchange={{action "setCategory" value="target.value"}} class="form-control">
+			<option value=""></option>
 
-					{{#each user-categories  as |userCategoryChoice|}}
+			{{#each categories  as |categoryChoice|}}
 
-						<option value={{userCategoryChoice.id}} selected={{eq userCategoryChoice.id model.userCategoryChoice.id}}>{{userCategoryChoice.name}}</option>
+				<option value={{categoryChoice.id}} selected={{eq categoryChoice.id model.categoryChoice.id}}>{{categoryChoice.name}}</option>
 
-					{{/each}}
-				</select>
-			</div>	
-		</div>
+			{{/each}}
+		</select>
+	</div>	
+</div>
