--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -1,7 +1,8 @@
 <div class="container">
 
 	<!-- <label for="username">Logged in as: <font color="green">{{model.username}}</font></label> -->
-	<form class="form-horizontal col-md-10"  {{action "profileUpdate" on="submit"}}>
+	<!-- {{action "profileUpdate" on="submit"}} -->
+	<form class="form-horizontal col-md-10" {{action "clearMessage" on="click"}}>
 
 		<div class="profileForm form-group">
 			<label for="email" class="col-sm-2 control-label">Email</label>
@@ -106,8 +107,12 @@
 			</div>	
 		</div>
 
-		<div class="col-sm-offset-2">
+		<!-- <div class="col-sm-offset-2">
 			<button type="submit" class="btn btn-primary" disabled={{v-get model 'isInvalid'}}>Submit</button>
+		</div> -->
+
+		<div class="col-sm-offset-2">
+			<button type="submit" class="btn btn-primary" {{action "profileUpdate"}} disabled={{v-get model 'isInvalid'}}>Submit</button>
 		</div>
 
 	
