--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -100,7 +100,7 @@
 
 					{{#each categories  as |categoryChoice|}}
 
-						<option value={{categoryChoice.id}} selected={{eq categoryChoice.id model.categoryChoice.id}}>{{categoryChoice.name}}</option>
+						<option value={{categoryChoice.id}} selected={{eq categoryChoice.id model.category.id}}>{{categoryChoice.name}}</option>
 
 					{{/each}}
 				</select>
