Clear editMessage & petitionMessage on click

--- a/travelsFront/app/templates/petition.hbs
+++ b/travelsFront/app/templates/petition.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="form-horizontal col-md-12 leftForm" role="form">
+	<form class="form-horizontal col-md-12 leftForm" {{action "clearMessage" on="click"}} role="form">
 
 		<div class="col-md-6 leftForm">
 			{{partial 'petition-profile'}}
