--- a/travelsFront/app/templates/edit-petition.hbs
+++ b/travelsFront/app/templates/edit-petition.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-	<form class="form-horizontal col-md-12 leftForm" role="form">
+	<form class="form-horizontal col-md-12 leftForm" {{action "clearMessage" on="click"}} role="form">
 
 		<div class="col-md-6 leftForm">
 			<h4>Στοιχεία Προφίλ</h4><br>
