Clear deleteMessage on click

--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -1,5 +1,5 @@
 <div>
-	<table class="table table-sm">
+	<table class="table table-sm" {{action "clearMessage" on="click"}}> 
 		<thead>
 			<tr>
 				<th>Όνομα</th>
